log/build_2022-10-11_12-32-16/py_pubsub/stderr.log
  File "/home/asadbek/ros2_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/subscriber_member_function.py", line 18
    ffrom tutorial_interfaces.msg import Num        # CHANGE
          ^
SyntaxError: invalid syntax

